--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="./images/cat.jpg">
+        <img src="./images/cat.jpg" alt="cat">
         <nav class="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -27,14 +27,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus qui mollitia nobis corporis hic. Provident illo aliquam alias itaque quas animi inventore, delectus nesciunt reiciendis enim quibusdam nihil, corrupti minus.</p>
                 <button>Click Me!</button>
             </div>
-            <img src="./images/cat.jpg" alt="cool_cat">
+            <img src="./images/cat.jpg" alt="cat">
             
         </section>
 
         <section class="container">
 
             <article class="article">
-                <img src="./images/cat.jpg" alt="cool_cat">
+                <img src="./images/cat.jpg" alt="cat">
                 <h2>Headline</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum provident natus facere atque sit omnis praesentium minima fugit explicabo quo, illum, sapiente suscipit quaerat repellat quasi quis quam, incidunt vel.</p>
 
@@ -42,7 +42,7 @@
             </article>
 
             <article class="article">
-                <img src="./images/cat.jpg" alt="cool_cat">
+                <img src="./images/cat.jpg" alt="cat">
                 <h2>Headline</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum provident natus facere atque sit omnis praesentium minima fugit explicabo quo, illum, sapiente suscipit quaerat repellat quasi quis quam, incidunt vel.</p>
 
@@ -50,7 +50,7 @@
             </article>
 
             <article class="article">
-                <img src="./images/cat.jpg" alt="cool_cat">
+                <img src="./images/cat.jpg" alt="cat">
                 <h2>Headline</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum provident natus facere atque sit omnis praesentium minima fugit explicabo quo, illum, sapiente suscipit quaerat repellat quasi quis quam, incidunt vel.</p>
 
@@ -61,7 +61,7 @@
     <footer>
         <div class="top">
             <span class="logo">
-                <img src="./images/cat.jpg" id="cat">
+                <img src="./images/cat.jpg" id="cat" alt="cat">
             </span>
 
             <span class="link">Link one</span>
@@ -70,13 +70,13 @@
             <span class="link">Link four</span>
 
             <span class="social">
-                <img src="./images/instagram.jpeg">
+                <img src="./images/instagram.jpeg" alt="instagram">
             </span>
             <span class="social">
-                <img src="./images/facebook.png">
+                <img src="./images/facebook.png" alt="facebook">
             </span>
             <span class="social">
-                <img src="./images/twitter.png">
+                <img src="./images/twitter.png" alt="twitter">
             </span>
         </div>
 
