--- a/Module2/Exercise2/Q3/index.html
+++ b/Module2/Exercise2/Q3/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="one">1</div>
-        <div class="two">2</div>
-        <div class="three">3</div>
-        <div class="four">4</div>
-        <div class="five">5</div>
-        <div class="six">6</div>
-        <div class="seven">7</div>
-        <div class="eight">8</div>
-        <div class="nine">9</div>
+        <div class="one center">1</div>
+        <div class="two center">2</div>
+        <div class="three center">3</div>
+        <div class="four center">4</div>
+        <div class="five center">5</div>
+        <div class="six center">6</div>
+        <div class="seven center">7</div>
+        <div class="eight center">8</div>
+        <div class="nine center">9</div>
     </div>
 </body>
 </html>
